--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lucide-react": "^0.575.0",
     "next": "^16.1.6",
+    "nodemailer": "^8.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
